5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4191/executions/1716_2505.log
== TEST (2019-05-14 16:36:45) 
-- CODE:
import math
x=eval(input("Valor de x: "))
k=int(input("Valor de k: "))
cont=1
sinal=-1
resultado=x
expoente=3

while(cont<k):
	resultado=resultado+(sinal*(x**expoente/factorial(expoente)))
	sinal=sinal*(-1)
	expoente=expoente+2
	cont=cont+1
print(round(resultado, 10))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x=eval(input())
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:37:07) 
-- CODE:
from math import pi
x=eval(input("Valor de x: "))
k=int(input("Valor de k: "))
cont=1
sinal=-1
resultado=x
expoente=3

while(cont<k):
	resultado=resultado+(sinal*(x**expoente/factorial(expoente)))
	sinal=sinal*(-1)
	expoente=expoente+2
	cont=cont+1
print(round(resultado, 10))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    resultado=resultado+(sinal*(x**expoente/factorial(expoente)))
NameError: name 'factorial' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:37:42) 
-- CODE:
from math import factorial()
from math import pi
x=eval(input("Valor de x: "))
k=int(input("Valor de k: "))
cont=1
sinal=-1
resultado=x
expoente=3

while(cont<k):
	resultado=resultado+(sinal*(x**expoente/factorial(expoente)))
	sinal=sinal*(-1)
	expoente=expoente+2
	cont=cont+1
print(round(resultado, 10))	
-- ERROR:
File "XXXX", line 1
    from math import factorial()
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:37:48) 
-- CODE:
from math import factorial
from math import pi
x=eval(input("Valor de x: "))
k=int(input("Valor de k: "))
cont=1
sinal=-1
resultado=x
expoente=3

while(cont<k):
	resultado=resultado+(sinal*(x**expoente/factorial(expoente)))
	sinal=sinal*(-1)
	expoente=expoente+2
	cont=cont+1
print(round(resultado, 10))	
-- OUTPUT:
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:37:59) 
-- CODE:
from math import factorial
from math import pi
x=eval(input("Valor de x: "))
k=int(input("Valor de k: "))
cont=1
sinal=-1
resultado=x
expoente=3

while(cont<k):
	resultado=resultado+(sinal*(x**expoente/factorial(expoente)))
	sinal=sinal*(-1)
	expoente=expoente+2
	cont=cont+1
print(round(resultado, 10))	
-- EXECUTION TIME:
0.206252
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-0.9998431014
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.8662952838
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
